syntax = "proto3";
package pb;


option go_package = "github.com/RoyceAzure/go-stockinfo/api/pb";

message UserStock{
    int64 user_id=1;
    int64 stock_id = 2;
    int32 quantity = 3;
    string purchase_price_per_share = 4;
}